# PBRBench

./: .gitignore  .gitmodules  README.md  pyproject.toml
configs/: eval_pbr_2d_direct.yaml  eval_pbr_2d_indirect.yaml  infer_pbr_2d.yaml  render_views_2d.yaml
configs/camera/: six_views.yaml
configs/data/: all_2d.yaml  dtc_2d.yaml  objaverse_2d.yaml  pbr_estimation_2d_texverse.yaml  polyhaven_2d.yaml  texverse_2d.yaml  texverse_sv.yaml
configs/data/preprocessing/: dtc_2d.yaml  dtc_3d.yaml  objaverse_2d.yaml  polyhaven_2d.yaml  polyhaven_3d.yaml  texverse_2d.yaml  texverse_3d.yaml
configs/data/preprocessing/lighting/: polyhaven_source_v0.yaml
configs/data/splits/: objaverse_pbr_64.yaml  texverse_pbr_100.yaml
configs/data/subsets/: dtc_pbr_64.yaml  objaverse_pbr_64.yaml  polyhaven_pbr_64.yaml  texverse_pbr_100.yaml  texverse_pbr_64.yaml
configs/lights/: polyhaven_sv_v0.yaml
configs/method_2d/: diffusion_renderer.yaml  neural_lightrig.yaml  supermat.yaml
configs/renderer/: blender_cycles.yaml
scripts/: download_polyhaven_envmaps.py
scripts/sbatch/: supermat.sh
src/: eval_pbr_2d_direct.py  eval_pbr_2d_indirect.py  infer_pbr_2d.py
src/data/: __init__.py  pbr_estimation_dataset_2d.py
src/data/preprocessing/: __init__.py  _assets.py  _common.py  _render_views_2d.py  _render_views_3d.py  render_views_2d.py  render_views_3d.py  utils.py
src/methods_2d/: __init__.py  base.py  diffusion_renderer.py  neural_lightrig.py  supermat.py
src/utils/: __init__.py  _relight_pbr_2d_blender.py  eval.py  metrics.py  pylogger.py
(+11 files in other folders)
