[project]
name = "pbr-estimation-eval"
version = "0.1.0"
description = "Reproducible evaluation of object-centric PBR material estimation"
requires-python = ">=3.10"
dependencies = [
  "huggingface-hub>=0.28",
  "hydra-core>=1.3",
  "pillow>=11",
  "pyyaml>=6",
  "requests>=2.32",
  "rootutils>=1.0.7",
  "tqdm>=4.67",
]

[tool.uv]
package = false
