[project]
name = "pbr-estimation-eval"
version = "0.1.0"
description = "Reproducible evaluation of object-centric PBR material estimation"
requires-python = ">=3.10"
dependencies = [
  "huggingface-hub>=0.25",
  "hydra-core>=1.3",
  "lpips>=0.1.4",
  "numpy>=1.26",
  "pillow>=11",
  "pyyaml>=6",
  "requests>=2.32",
  "rootutils>=1.0.7",
  "scipy>=1.11",
  "torch>=2.4",
  "torchvision>=0.19",
  "tqdm>=4.67",
]

[tool.uv]
package = false
